--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
   <Header />
   <main id="main-content">
     <section id="hero">
-      <h1 class="mr-2">Mingalaba</h1>
+      <h1 class="mr-2">DevMarketing LLC</h1>
       <a
         target="_blank"
         href="/rss.xml"
@@ -41,19 +41,11 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       </a>
 
       <p>
-        AstroPaper is a minimal, responsive, accessible and SEO-friendly Astro
-        blog theme. This theme follows best practices and provides accessibility
-        out of the box. Light and dark mode are supported by default. Moreover,
-        additional color schemes can also be configured.
+        We believe marketing is engineering, not art. We believe marketers should be engineers (at least at-heart), and marketing problems should be <b>solved like engineering problems</b>. When a developer runs into a problem, their first instinct is to time-box it and use a broad-swath of open-source tools and communities to creatively solve it as efficiently and frugally as possible. Marketing teams too often reach for expensive tools and out-of-date playbooks to work-around solvable problems. 
       </p>
       <p>
-        Read the blog posts or check
-        <LinkButton
-          className="hover:text-skin-accent underline underline-offset-4 decoration-dashed"
-          href="https://github.com/satnaing/astro-paper#readme"
-        >
-          README
-        </LinkButton> for more info.
+
+        DevMarketing was started by <b>engineer-turned-marketer Jarod Reyes</b> who built high-performing developer marketing teams at <b>Twilio, Auth0 and PlanetScale</b> before venturing out to help early-stage startups nail some of the early scaffolding necessary to achieve rapid and consistent growth. Book time today to solve some marketing problems.
       </p>
       {
         // only display if at least one social link is enabled
