--- a/src/pages/posts/[slug]/index.astro
+++ b/src/pages/posts/[slug]/index.astro
@@ -26,6 +26,8 @@ export async function getStaticPaths() {
   return [...postResult, ...pagePaths];
 }
 
+export const prerender = true;
+
 const { slug } = Astro.params;
 const { post } = Astro.props;
 
