Adding Api Intro

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import { SITE } from "@config";
 import "@styles/base.css";
 import { ViewTransitions } from "astro:transitions";
+// import ChatWidget from 'components/ChatWidget.jsx';
 
 const googleSiteVerification = import.meta.env.PUBLIC_GOOGLE_SITE_VERIFICATION;
 
@@ -81,5 +82,6 @@ const socialImageURL = new URL(
   </head>
   <body>
     <slot />
+    <!-- <div class="chatWidget"><ChatWidget client:only="react"/></div> -->
   </body>
 </html>
