--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -85,3 +85,13 @@ const socialImageURL = new URL(
     <!-- <div class="chatWidget"><ChatWidget client:only="react"/></div> -->
   </body>
 </html>
+<script type="text/javascript">
+        window.omnisend = window.omnisend || [];
+        omnisend.push(["accountID", "656e398a34d22521e1a1283f"]);
+        omnisend.push(["track", "$pageViewed"]);
+        !function(){var e=document.createElement("script");
+        e.type="text/javascript",e.async=!0,
+        e.src="https://omnisnippet1.com/inshop/launcher-v2.js";
+        var t=document.getElementsByTagName("script")[0];
+        t.parentNode.insertBefore(e,t)}();
+</script>
