--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -123,6 +123,22 @@
   pre > code {
     white-space: pre;
   }
+
+  /* ============ custom ============ */
+  .video-container {
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%;
+  }
+
+  .video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+  }
 }
 
 @layer components {
