Added contact page and new post.

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -66,8 +66,8 @@ const { activeNav } = Astro.props;
             </a>
           </li>
           <li>
-            <a href="/tags" class={activeNav === "tags" ? "active" : ""}>
-              Tags
+            <a href="/contact" class={activeNav === "tags" ? "active" : ""}>
+              Contact Us
             </a>
           </li>
           <li>
